--- a/spring-learning/aop/pom.xml
+++ b/spring-learning/aop/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>spring-learning</artifactId>
-        <groupId>com.spft1851</groupId>
+        <groupId>com.soft1851</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
