--- a/spring-learning/pom.xml
+++ b/spring-learning/pom.xml
@@ -31,7 +31,7 @@
         <junit.version>4.12</junit.version>
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.29</slf4j.version>
-        <druid.version>1.1.10</druid.version>
+        <druid.version>1.1.21</druid.version>
         <fastjison.version>1.2.56</fastjison.version>
         <mybatis.version>3.5.4</mybatis.version>
         <spring-mybatis.version>2.0.4</spring-mybatis.version>
@@ -153,6 +153,13 @@
             <version>1.2.56</version>
             <scope>compile</scope>
         </dependency>
+
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>javax.annotation</groupId>-->
+<!--            <artifactId>javax.annotation-api</artifactId>-->
+<!--            <version>1.3.2</version>-->
+<!--        </dependency>-->
 
         <!--MyBatis依赖-->
         <dependency>
